# SuzhouGardenVis

./: .cfignore  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  README.md  REVIEWER.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.ts  wrangler.jsonc  实现方案.md  项目需求.md
.trae/documents/: 数据清洗技术文档.md
archived/: table_structure_analysis.json  ylml_details.json  ylml_details_normalized.json  ylml_details_normalized.reviewed.json  ylml_list.json
archived/web/: SuzhouGardenListFull.csv  spatial-band.html  use-tradeoff.html
dataset/: SuzhouGardenList.csv  SuzhouGardenListFull.csv  SuzhouGardenListFull.excel.csv  ylml-schema.json  ylml.json  全国重点文物保护单位名单.csv
docs/: DEPLOYMENT.md  OLD_VIS_INDEX.md  REVIEWER.md  可视化思路.md  实现总结.md  实现方案.md  强化可视化叙事报告.md  项目需求.md
html/: 一榭园.html  东山雕花楼.html  严家花园.html  倚晴园.html  全晋会馆.html  兴福禅寺.html  北半园.html  南社通讯处旧址.html  古松园.html  可园.html  后乐园.html  听枫园.html  塔影园.html  师俭园.html  张厅.html  怡园.html  惠荫园.html  拙政园.html  拥翠山庄.html  揖秀园.html  明轩实样.html  朴园.html  松梅小圃.html  枫华园.html  榜眼府第.html  残粒园.html  狮子林.html  环秀山庄.html  环翠山庄.html  畅园.html  留园.html  石湖梅圃.html  网师园.html  翁家花园.html  耕乐堂.html  耦园.html  聚沙园.html  艺圃.html  虹饮山房.html  詹氏花园.html  (+6 more)
html/1/: 万氏花园.html  北寺塔.html  天香小筑.html  寒山寺.html  曲园.html  沧浪亭.html  绣园.html  (+2 more)
scripts/: analyze_table_structure.py  normalize_images.py  organize_html.py  supplement_heritage_level.py
src/: App.vue  main.ts  style.css
web/: index.html  ownership-insights.html
(+99 files in other folders)
