[project]
name = "suzhougardenvis"
version = "0.1.0"
description = "苏州园林HTML表格到JSON转换器 - 基于LLM的智能数据提取和转换工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "openai>=1.35.0",
    "jsonschema>=4.25.1",
    "tqdm>=4.66.0",
    "pandas>=2.3.3",
]
